--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ footer {
     align-items: center;
     font-size: 0.85rem;
 }
+/* footer panel 2 */
 .foot-panel2 {
     background-color: #222f3d;
     color: white;
